# gulaschdisplay-client

./: main.py  pyproject.toml
gulaschdisplay_client/: main.py
